Budget status info.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^6.0.0",
-    "@angular/cdk": "^6.0.2",
+    "@angular/cdk": "^6.1.0",
     "@angular/common": "^6.0.0",
     "@angular/compiler": "^6.0.0",
     "@angular/core": "^6.0.0",
@@ -22,9 +22,13 @@
     "@angular/platform-browser": "^6.0.0",
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
+    "@ngx-gallery/core": "^2.1.1",
+    "@ngx-gallery/gallerize": "^2.1.1",
+    "@ngx-gallery/lightbox": "^2.1.1",
     "accord": "^0.29.0",
     "core-js": "^2.5.4",
     "rxjs": "^6.0.0",
+    "rxjs-compat": "^6.2.0",
     "semantic-ui": "^2.3.1",
     "zone.js": "^0.8.26"
   },
